feat: update 追过的番

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -483,6 +483,7 @@ type: page
 - ✅ [白沙的水族馆](https://bgm.tv/subject/325281)
 - ✅ [加油！同期酱](https://bgm.tv/subject/346242)
 - ✅ [看得见的女孩](https://bgm.tv/subject/330973)
+- ✅ [世界顶尖的暗杀者转生为异世界贵族](https://bgm.tv/subject/328313)
 - 雏子的笔记
 - 大狼
 
@@ -556,6 +557,8 @@ type: page
 
 # 一些感想
 
+可能会写一点感想啥的（）
+
 ## Aquatope 2021/12/19
 
 暑假的时候开始追的，一如既往的PA的水准。华丽的作画，丰富的背景，听不厌的OP/ED（所以说网易云你什么时候才能买）。非常有琉球的感觉，回想起来六年前寒假时去的冲绳。我记得当时也去了水族馆，从高处眺望海，虽是阴天，但是还是和番中的场景有那么一点重合。好像有点离题了。
@@ -591,3 +594,9 @@ type: page
 没有 H scene 是不好的。HS：食之无味，弃之可惜。
 
 剧情挺有意思的，还有众多柚子梗（为什么我前面打出了玉子，玉祖，玉祖标记（雾）（我的项目 Yuzumarker 被 bing 翻译翻成了 *玉祖标记* ）。虽然 OP 中有一些蜜汁 3D，但是 CG 还是一如既往的可爱啊。prprprprprprprprpr。添得停不下来了。
+
+## 世界顶尖的暗杀者转生为异世界贵族 2021/12/22
+
+还是挺有意思的，中规中矩吧。不过看到中间的某些scene还是很兴奋啊。看起来小说挺有意思的，日后可以看看。
+
+看那些生成魔法的时候突然想到了 dr. stone （陈年旧事涌上心头.jpg）
