feat: update moe

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -545,6 +545,8 @@ type: page
     * ✅ HE
     * ❌ BE
     * ❌ TE
+* Key
+  * 
 
 # 漫画
 
@@ -559,7 +561,7 @@ type: page
 
 可能会写一点感想啥的（）
 
-## Aquatope 2021/12/19
+## Aquatope 2021/12/19 [几乎无剧透]
 
 暑假的时候开始追的，一如既往的PA的水准。华丽的作画，丰富的背景，听不厌的OP/ED（所以说网易云你什么时候才能买）。非常有琉球的感觉，回想起来六年前寒假时去的冲绳。我记得当时也去了水族馆，从高处眺望海，虽是阴天，但是还是和番中的场景有那么一点重合。好像有点离题了。
 
@@ -573,7 +575,7 @@ type: page
 
 但是。可能这也是这么长时间以来，为数不多的，又想认真追的番了。原创不易。respect（为什么瞬间想到了菜宝的鲤spect，果然是昨天的特别节目上头了）
 
-## Parquet 2021/12/10
+## Parquet 2021/12/10 [无剧透]
 
 很早就推完了，刚出来没多久的时候花了两天推完的。打的时候就在想，不愧是东山的单口相声呢（笑。看到知乎上一句发人深省的话：
 
@@ -595,8 +597,74 @@ type: page
 
 剧情挺有意思的，还有众多柚子梗（为什么我前面打出了玉子，玉祖，玉祖标记（雾）（我的项目 Yuzumarker 被 bing 翻译翻成了 *玉祖标记* ）。虽然 OP 中有一些蜜汁 3D，但是 CG 还是一如既往的可爱啊。prprprprprprprprpr。添得停不下来了。
 
-## 世界顶尖的暗杀者转生为异世界贵族 2021/12/22
+## 世界顶尖的暗杀者转生为异世界贵族 2021/12/22 [无剧透]
 
 还是挺有意思的，中规中矩吧。不过看到中间的某些scene还是很兴奋啊。看起来小说挺有意思的，日后可以看看。
 
 看那些生成魔法的时候突然想到了 dr. stone （陈年旧事涌上心头.jpg）
+
+## Summer Pockets REFLECTION BLUE [大量剧透]
+
+2021/12/27 刚推完识线，趁热打铁写点感想。毕竟已经推了四个人了。
+
+一直都说喜欢 key，一直都说麻子的作品很刀人，但其实这次推 sprb 才是我真正第一次推 key 的 gal。讲讲推的这几条线吧。
+
+最开始我甚至没有意识到剧情的问题。不看剧透，不搜顺序，点开一个攻略，凭着冬日里一颗炙热的心中不断翻滚的冲国人白毛控的性癖，投身于白羽线的怀抱。
+
+还没推 ALKA 和 Pockets，只能说白羽线本身还不够震撼人心，不多做评价，听说很刀（悲 / 害怕）。
+
+说说其他线吧。
+
+### 紬
+
+阴差阳错，在群友的推荐下第二条便推了紬。当时被安利了紬和苍，但由于苍的樋妈脸画风实在不戳我，于是乎便选择了前者。
+
+说实话，本身推紬线的时候我并没有想到我会在推第二条线的时候选择紬。奇怪（？）的口癖和年幼的声线并没有那么戳我的 xp，欧派星人的一些刻意涩情成分也让我无动于衷。
+
+剧情如白开水般的展开，在那个夜晚不断煽动起我烦躁的情绪，狂妄地认为已经看透这条「纯爱」线的一切，想要快速通关。
+
+我认为可能泣系剧本最重要的地方，或者说所有震撼人心的情节，正是由这种「狂妄自大」或者说「思维诱导」所产生。作为玩家，在游戏的过程中我们会不自觉地进行预测，不自觉地思考下一步剧情的走向。
+
+不断地预测，不断地反转。不断地预测，不断地有出乎意料的细节，或者说一眼望不到尽头的伏笔。
+
+风平浪静时水面上突然的扰动，甜蜜日常中从天而降的异常，勾起玩家兴趣的同时营造出欢乐而又不安的氛围同时埋下伏笔，在高潮时便能瞬间让人破防。
+
+在紬线里看到那张照片的时候，在识线里不断地陈述鹰原「内心的违和感」的时候，又或者是在鸥线中不断地产生「既视感」的时候，无一不是在诱导着我们的思维，最后用最意想不到的结局让人感动，让人哭泣。
+
+哎呀，一不小心把三条线给一起说了。那就再说一点吧。
+
+在推这么多条线的时候，都围绕着同一个永恒的主题，夏天。「在这个夏天」贯穿着始末。欧线是夏日的冒险与愿望，紬线是夏日里的恋爱与自我探索，白羽线是这个季节的邂逅与日常，识线是这个季节的努力与期望。
+
+给出一个限定的时间区间，从最开始便告诉玩家时间的有限，在游玩时文本从「宽裕」变到「有限」再到「紧迫」，焦虑感的不断叠加，就仿佛让人真的想起了童年的暑假（笑。
+
+以及最后，紬所哼的那首歌，推之前和推之后真的是两首歌（哭）
+
+星空下，满地烛光。谈笑间，斯人已去，但留故人泪流满面。
+
+写到这里，感觉这条线最后是否给我 HE 已经不重要了。
+
+### 神山识
+
+突然想专门说说神山识这条线，可能是刚推玩的原因吧。怎么说呢，可能这条线是到目前为止最震撼我内心的吧。无论是鹰原带着饭团去祭扫，还是中途所营造出的紧张感，亦或是在神隐离别时「这次就轮到我去做鬼了」的一语双关，又或者是两人间信物的感应，很难让人绷得住，直接破防。
+
+「饭团子啦」
+
+文学少女好戳我，知识渊博的少女好戳我，害羞但却开朗的少女好戳我。
+
+<div align="center">
+	<img src="https://cdn.jsdelivr.net/gh/JeffersonQin/blog-asset@latest/usr/picgo/20211227012621.png" width=200>
+	<img src="https://cdn.jsdelivr.net/gh/JeffersonQin/blog-asset@latest/usr/picgo/20211227012541.png" width=200>
+	<img src="https://cdn.jsdelivr.net/gh/JeffersonQin/blog-asset@latest/usr/picgo/20211227012631.png" width=200>
+</div>
+
+### 鸥
+
+这才是暑假啊（感慨）。先不提后半段的刀子，夏日的冒险真的刻画得太有感觉了。
+
+「我会穿越那七大海洋，去和你相见。将我的爱意，带到你身边。」
+
+最后的开放式结局真的很不错。
+
+### 个人评价
+
+识 > 欧 ≈ 紬
