feat: recent update

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -484,6 +484,8 @@ type: page
 - ✅ [加油！同期酱](https://bgm.tv/subject/346242)
 - ✅ [看得见的女孩](https://bgm.tv/subject/330973)
 - ✅ [世界顶尖的暗杀者转生为异世界贵族](https://bgm.tv/subject/328313)
+- ✅ [关于前辈很烦人的事](https://bgm.tv/subject/309670)
+- ✅ [宿命回响：命运节拍](https://bgm.tv/subject/331535)
 - 雏子的笔记
 - 大狼
 
@@ -697,3 +699,13 @@ type: page
 嘛...终于能推 ALKA 了，我等得好苦啊。（雾
 
 先写文书再来推，听说会自闭，要是今天再不写我人就没了。
+
+## 关于前辈很烦人的事 [有没有剧透都无所谓，话说真的有剧情吗（雾]
+
+中规中矩，但是这段时间挺少见的~~异世界~~工作番。前半段是真的好甜好甜，到后半段就...有点审美疲劳稍有尴尬。不过还是挺推荐的。
+
+## 宿命回响：命运节拍 [微剧透]
+
+本来我以为是公路片，还挺期待整个过程的，结果你给我就这？？？
+
+~~再看原创我是狗，还看还看~~
