feat: 更新 sprb 感想

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -557,8 +557,8 @@ type: page
     * ❌ 加藤海未
     * ✅ 野村美希
     * ✅ 水织静久
-    * ❌ ALKA
-    * ❌ Pockets
+    * ✅ ALKA
+    * ✅ Pockets
     * ❌ 岛可梦线
     * ❌ 乒乓球线
     * ✅ Bad End 回家
@@ -611,6 +611,8 @@ type: page
 没有 H scene 是不好的。HS：食之无味，弃之可惜。
 
 剧情挺有意思的，还有众多柚子梗（为什么我前面打出了玉子，玉祖，玉祖标记（雾）（我的项目 Yuzumarker 被 bing 翻译翻成了 *玉祖标记* ）。虽然 OP 中有一些蜜汁 3D，但是 CG 还是一如既往的可爱啊。prprprprprprprprpr。添得停不下来了。
+
+2022/1/1 Update: 昨天晚上看了以前发的朋友圈，发现上面那条知乎我在两年前发过，最近又发了，然而我却没印象了。玄学...
 
 ## 世界顶尖的暗杀者转生为异世界贵族 2021/12/22 [无剧透]
 
@@ -699,6 +701,54 @@ type: page
 嘛...终于能推 ALKA 了，我等得好苦啊。（雾
 
 先写文书再来推，听说会自闭，要是今天再不写我人就没了。
+
+---
+
+### ALKA + Pocket
+
+2021/12/31 今年最后一天（写完已经是 2022 了），花了大半天推完了 ALKA 和 Pocket。有点自闭。援引一句看到的评价：
+
+「到最后可能并不是剧情让我泪目，而是声优的演绎和配乐」
+
+直到想通了以后，我才有种释然的感觉。
+
+下面稍微写一下我的理解和分析。【下面是剧透重灾区】
+
+* 【鸣濑一族的能力】回到过去某个时间点，然后在一段时间内陷入轮回，呼应了 Pocket 线中镜子说的 「获得这种能力换句话说就是被关进了一个牢笼」，名为「暑假」的牢笼。
+* 【什么是白羽的「看到」】前面说了，能力是回溯 + 轮回，而不是看到。所以看到这件事我推断是轮回过程中的副产物。在不断的轮回中，记忆的残渣被保留了下来，所以当通往某一个轮回的结局的时候，就可能能够看到未来，也就是既定结局（有宿命论的感觉了）。正因为如此，第一次经历是看不到的，应该只有经历了不知一次才能看到。
+* 【能够看到未来和不同的线路结局冲不冲突】不冲突。每次轮回都有可能是不一样的。当通往既定轮回，既因为一些客观原因通向了一个既定结果之后才能看见（感觉有点矛盾，但是又好像没毛病）
+* 【白羽为什么会陷入轮回】难产，发动了轮回。
+* 【白羽轮回的时间范围】因该是轮回到了小时候。因为在白羽线中白羽对男主提到过「小时候『诅咒』了同学」，而这个「诅咒」是看见，说明当时应该已经陷入了轮回。
+* 【白羽怀孕时看到了什么】白羽看到的是自己生下 umi 时难产。注意：这时应该已经陷入轮回了。
+* 【白羽怀孕时看到之后做了什么】想要找办法规避破灭的未来，失败。下写了未来给羽未的信。注意：这里羽未后来
+* 【羽未轮回的时间范围】羽未回到了父母相识的那个暑假不断轮回，但是轮回不会只在暑假结束的时候结束，暑假结束之后实体消失但是仍然能够继续观察（这里参考羽未看到了白羽怀孕的时候便能知道了）。
+* 【羽未为什么会回到过去】分为两个阶段。第一个阶段是羽未还没有进入轮回的时候；第二个阶段是羽未轮回了无数次已经消失之后，在七影蝶（以及被困在时间轮回中的很多人）的帮助下，回到白羽（也就是她妈）小时候的时候。
+  * 【阶段一】因为和父亲（男主）之间关于母亲的隔阂以及一系列原因想要和爸爸妈妈度过一个快乐的暑假。[引用萌娘百科的前情提要](https://zh.moegirl.org.cn/%E5%8A%A0%E8%97%A4%E7%BE%BD%E6%9C%AA): 当羽未还小、还在岛上生活的时候，她就遭遇了像年幼的白羽被迷途橘吸引那样的神隐（失踪）。羽依里担心羽未重蹈白羽的覆辙，走上与之相同的道路，便带她离开了岛。为了保护羽未，羽依里决定不向女儿说明羽未母亲的事，也尽可能远离与岛上有关的所有事情。结果，这反而让他们父女之间形成了严重的隔阂。<br>转眼间，白羽已经逝世十三（萌娘百科为 12）年了。得知羽依里去参加白羽的法事后，羽未独自前往岛上，从她爷爷（实际上是太爷爷）那儿获得了一张白羽及岛上众人和羽依里在相遇时的那个夏天结束时留下的欢乐合照，而这也许是白羽留在这个世界的最后一片映像吧。羽未本想好好珍藏它的，但这件事却被她的爸爸羽依里发现了。为了不让他丢掉照片，羽未逃进了山里。夜色渐深，她不幸摔落悬崖。在无尽深渊中，她坠落不止。突然，一只晶莹的蝴蝶穿过，仿佛引路的使者。羽未拼命伸手，竟碰到了它。白影闪烁，当羽未回过神来时，她发现自己竟回到了爸爸妈妈度过的第一个夏天。从此，为了能有一个与她的妈妈一起度过的夏天，她便在那个夏天里不断地轮回着、轮回着。在夏日的旅途中，她把翅膀上的颜色分给每一个与她相遇的人，翅膀也在无尽的旅程中变得纯白而破烂了。即她在每一次轮回都会在岛上留下一些记忆不能带走，这样羽依里在这个世界的“既视感”（羽依里不断且无意识地触摸着羽未散落在岛上的七影蝶，从而获得了她的一些记忆）和羽未的幼化（世界会不时进行时间修正，羽未最新的记忆就消失了）就可以解释了；同时其存在感也会愈发稀薄，直到最后，羽未被人们遗忘，不能再作为思念体出现在过去的时间里。
+  * 【阶段二】羽未的存在消失之后，产生了强烈的情感想要让白羽摆脱轮回，然后被神秘的力量赋予了实体（影法师？）穿越到了白羽小时候的过去。
+* 【轮回是如何被摆脱的】蝴蝶效应？以前的事情被改变了，未来的事情也同样发生了巨大的变化，~~不知道为什么~~原来七条线里的不幸都消失了。
+* 【为什么白羽在原来的时间线能力在小时候没有觉醒】同样是因为蝴蝶效应。在 Pocket 线中能力之所以觉醒是因为七海（羽未）的出现改变了当时的进程，在原本的情况下白羽会听从祖父小鸠的话原理食堂，不会碰到母亲的表兄弟，也就不会再次会想起她的能力。与七海的相遇将原本的宿命打乱。（怎么又是蝴蝶效应）
+* 【关于 ALKA 线羽未的认知】到了 ALKA 线，羽未已经来到了能够轮回的最后一次。这次羽未决定不再「逃避」，而且此时心智已经退化成了小孩，一直呆在鹰原身边。同时鹰原从她身上看到了他所欠缺的拿份「不再逃避」的精神，决定实现羽未的愿望，让她和妈妈过上一个快乐的暑假。直到最后，羽未都一直认为白羽所拥有的能力是「预知」，而正是因为「她没有顾及怀孕的身体，一直拼命考虑着我的事情」才会这样。羽未看到白羽难产之后，轮回再次发动。此时羽未认为「这个夏天，自己不再存在。爸爸和妈妈的关系不会再变好，妈妈也就不会再死去」。然而羽未所看到的仍然是同样的既定结局。虽然没有她的存在，鹰原与白羽仍然在泳池相遇，仍然结婚，最后怀孕。在怀孕时，白羽又「看到」了，并回想起了「羽未在那个夏天和她的相遇」，然而这个轮回中羽未并没有出现。此时羽未意识到白羽的能力和她其实一样，不是「预知」，而是「回到过去不断轮回」，不停地回到「名为夏日的牢笼」。接下来承接的就是 Pocket 线了。
+* 【神山识发生了什么】并没有死，而是陷入了时间的夹缝之中。从识线里的「拿着信物再次感受到彼此」和 Pocket 线中识对羽未的拯救就能看出这一点。
+* 【关于男主有配音的时间段】我猜测男主有配音的时间段就是最外面的，不在轮回中的主时间线。回忆一下，我能够清晰地记起来地有两次（可能还有别的，欢迎补充）：刚来岛上的时候的序章、Pocket 线最后 umi，白羽和男主牵着手在海滩上走的那段时间。可以说这段轮回结束后的时间，给人明显以不一样的感觉。
+* 【ALKA 线的解锁条件】通完 ALKA 和 Pocket 才懂得为什么 ALKA 的解锁条件是把前七条线全部推完。可能是和当时「凉宫春日」的「漫无止境的八月」那样，让我们体会羽未的心情吧。
+
+Bug：
+* 白羽为什么告诉男主她能够预知，可能是发动轮回或者想起轮回这件事有限制条件？
+* 这个世界观怎么解释神山识那个时间线「看到海啸」这件事的因果论？
+* 【关于彩色飞机】这个东西就是个迷。可以穿越时间空间和思念。当成一种高级设定吧。
+* 【关于鸣濑瞳】我感觉这个又是个大 bug。她并没有穿越回过去找白羽的父亲，而是化成了七影蝶指点迷津...很玄学，不能放进现有的世界观进行解释。
+* 【关于镜子】我一直觉得没有镜子线很可惜啊...感觉镜子因该是和鸣濑瞳有关系，可能是串通好的（雾
+* 原文说的是「内心回到过去」。合着这不止是内心回到过去了吧。。。举例：七海的存在、羽未线
+* 这里面存在一个轮回嵌套的问题。七海轮回到以前，而白羽也进行了轮回，这个时候轮回就耦合了起来，到底是谁在谁的轮回里？
+* 虽然 bug 很多但是是最具解释性的一种理解了...
+
+一些参考：
+* https://tieba.baidu.com/p/6060094306
+* https://zh.moegirl.org.cn/%E5%8A%A0%E8%97%A4%E7%BE%BD%E6%9C%AA
+
+顺带一提看到了最后 ED 里七海的 CV 是香菜有种百感交集的感觉。
+
+还有海己线没推，过两天推，先缓一缓。。。
 
 ## 关于前辈很烦人的事 [有没有剧透都无所谓，话说真的有剧情吗（雾]
 
