feat: add comments for selection project

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -759,3 +759,14 @@ Bug：
 本来我以为是公路片，还挺期待整个过程的，结果你给我就这？？？
 
 ~~再看原创我是狗，还看还看~~
+
+## Selection Project [剧透]
+
+功：
+* 3D 太棒了，从未见过如此优秀的 3D Live。记得之前看 22/7 的时候给我留下了三渲二肯定不好这样的坏的印象，后来还思考过是不是能用一些 deep learning 的 approach 来解决。这次的 live 直接推翻了上次的这些想法。有光追，光影在 3D的渲染下十分合理，仔细观察衣服上的光影，又不失手绘的风格；大的色块处理得很好，角色面部画得真的是一绝，而且面部也没有奇怪得渐变阴影，完全是朝着手绘的风格贴近，眼睛画得超级棒；运镜流畅，非常凸显人物的性格和小动作，铃音和玲那的那个 live 摆裙的小动作太绝了。最后，安利 SVP (Smooth Video Project)，配合 SVP 补帧，这样水准的 3D Live 丝滑流畅
+* 歌很好听，Glorious Day (OP), Only One Yell (ED), 都很棒
+* 女孩子都很好看，贴贴的戏份也有
+
+过：
+* ~~和 Idoly Pride 设定有些撞车，不过听说是早放和晚放的原因~~
+* 那个内部投票是什么憨批剧情...
