feat: add cover

--- a/posts/2022/2/补码相反数位级表示的无符号数之和的意义证明.md
+++ b/posts/2022/2/补码相反数位级表示的无符号数之和的意义证明.md
@@ -6,7 +6,8 @@ authorId: 1
 categories: [技术]
 created: '2022-02-13 20:44:09'
 fields: {customSummary: '', mathjax: auto, noThumbInfoStyle: default, outdatedNotice: 'no',
-  reprint: standard, thumb: '', thumbDesc: '', thumbSmall: '', thumbStyle: default}
+  reprint: standard, thumb: 'https://cdn.jsdelivr.net/gh/JeffersonQin/blog-asset@latest/usr/picgo/20210903214801.png',
+  thumbDesc: '', thumbSmall: '', thumbStyle: default}
 modified: '2022-02-13 20:55:13'
 parent: 0
 password: ''
