--- a/posts/2022/2/赢函数的离散思考赢差分与有限赢.md
+++ b/posts/2022/2/赢函数的离散思考赢差分与有限赢.md
@@ -21,9 +21,9 @@ type: post
 
 近日来，“赢理论”、“可赢问题”、“赢函数”等讨论如雨后春笋般出现，引起了一波研究与讨论的热潮。随着赢理论在社会实践下的不断发展，赢理论的进一步发展同样也可能为我们社会的发展指明方向，带动我们更好地去“赢”、更好的判断我们“有没有赢”。
 
-回顾赢理论的理论基础与发展历程：知木奠定了赢函数的基本理论，开创性地研究了一元函数在时间序列上的可赢性[^1]；Deserter 则提出了比较赢理论，推广了“赢问题”的定义，给出了“去赢”、“判赢”的实践方法[^2]；在此之后一二三木头人则为我们引入了“赢”与“麻”的关系，给出了赢麻指数的定义[^3]，使问题进一步细化。
+回顾赢理论的理论基础与发展历程：知木奠定了赢函数的基本理论，开创性地研究了一元函数在时间序列上的可赢性(1)；Deserter 则提出了比较赢理论，推广了“赢问题”的定义，给出了“去赢”、“判赢”的实践方法(2)；在此之后一二三木头人则为我们引入了“赢”与“麻”的关系，给出了赢麻指数的定义(3)，使问题进一步细化。
 
-但是同时我们会发现一个问题：正如具体数学[^4]这本书的诞生一样，我们不仅应该研究「仅在一定情况下成立的漂亮的结论」，还需要深入探究，掌握如何在实践中恰如其分地推广赢理论，让我们更容易去赢、更理智地去赢。
+但是同时我们会发现一个问题：正如具体数学(4)这本书的诞生一样，我们不仅应该研究「仅在一定情况下成立的漂亮的结论」，还需要深入探究，掌握如何在实践中恰如其分地推广赢理论，让我们更容易去赢、更理智地去赢。
 
 在本文中，我们将引入“赢差分”的概念，同时会介绍，在平时我们遇到的离散情况下，推广后的赢理论如何更好地发挥它的强大效果。
 
@@ -61,11 +61,11 @@ $$
 
 # 有限赢理论
 
-虽然有限赢理论和“赢”本身的内涵好像显得格格不入，“有限”这两个字眼像是削尖了赢的光芒一般让人觉得难受，但是事实证明，有限赢理论可以从“有限”的视角，去探究与推广“无限”的赢，值得我们思考和学习。
+虽然有限赢理论和“赢”本身的内涵好像显得格格不入，“有限”这两个字眼像是消减了赢的光芒一般让人觉得难受，但是事实证明，有限赢理论可以从“有限”的视角，去探究与推广“无限”的赢，值得我们思考和学习。
 
 ## 有限理论的基础
 
-在具体数学[^4]中，我们对比微积分与和式，提出了有限微积分、差分、与差分算子。回顾一下定义：
+在具体数学(4)中，我们对比微积分与和式，提出了有限微积分、差分、与差分算子。回顾一下定义：
 
 无限微积分的微分 (derivative) 算子 $\mathrm D$ 由如下定义：
 
@@ -190,7 +190,7 @@ $$
 
 # 结论与展望
 
-我们用本文探讨了有限赢理论与赢差分的简单应用。这一领域还有很多地方可以研究，笔者也准备在以后在画一些篇幅定义**赢式**来更好地推广这个理论。同时，也希望大家能够不吝赐教。
+我们用本文探讨了有限赢理论与赢差分的简单应用。这一领域还有很多地方可以研究，笔者也准备在以后在花一些篇幅定义**赢式**来更好地推广这个理论。同时，也希望大家能够不吝赐教。
 
 本理论相比无限赢理论（连续赢理论可能会产生歧义，故称之为无限赢理论），更具有实践意义，方便研究人员与分析人员编写代码，批量判赢、批量找赢、批量报赢，在赢问题的处理上可谓省时省力。
 
@@ -198,7 +198,7 @@ $$
 
 # Reference
 
-[^1]:[一元实变赢函数定义及其应用](https://zhuanlan.zhihu.com/p/461464919)
-[^2]:[比较赢理论 - The Way to Win is All You Need](https://zhuanlan.zhihu.com/p/464145981)
-[^3]:[赢理论中赢麻指数的量化与应用](https://zhuanlan.zhihu.com/p/465246173)
-[^4]: [Concrete Mathematics: A Foundation for Computer Science, by Ronald Graham, Donald Knuth, and Oren Patashnik](https://www-cs-faculty.stanford.edu/~knuth/gkp.html)
+1. [一元实变赢函数定义及其应用](https://zhuanlan.zhihu.com/p/461464919)
+2. [比较赢理论 - The Way to Win is All You Need](https://zhuanlan.zhihu.com/p/464145981)
+3. [赢理论中赢麻指数的量化与应用](https://zhuanlan.zhihu.com/p/465246173)
+4. [Concrete Mathematics: A Foundation for Computer Science, by Ronald Graham, Donald Knuth, and Oren Patashnik](https://www-cs-faculty.stanford.edu/~knuth/gkp.html)
