chore: update latex format

--- a/posts/2022/3/深入理解成套方法.md
+++ b/posts/2022/3/深入理解成套方法.md
@@ -25,8 +25,14 @@ type: post
 对于任意的 $\alpha, \beta, \gamma$，试解递推式：
 
 $$
-	f(1) = \alpha \\
-	f(2n) = 2f(n) + \beta (n \geq 1) \\
+	f(1) = \alpha
+$$
+
+$$
+	f(2n) = 2f(n) + \beta (n \geq 1)
+$$
+
+$$
 	f(2n + 1) = 2f(n) + \gamma (n \geq 1)
 $$
 
