chore: fix title naming

--- a/posts/2022/3/具体数学-约瑟夫问题-旁注.md
+++ b/posts/2022/3/具体数学-约瑟夫问题-旁注.md
@@ -15,7 +15,7 @@ slug: concrete-math-josephus-problem-note
 status: publish
 tags: [Math]
 template: ''
-title: 具体数学-约瑟夫问题-旁注
+title: 具体数学 约瑟夫问题 旁注
 type: post
 ---
 注：本节内容为《具体数学》(原书第二版) 1.3 约瑟夫问题的旁注。
