--- a/posts/2022/3/具体数学-递归问题-热身题答案.md
+++ b/posts/2022/3/具体数学-递归问题-热身题答案.md
@@ -15,7 +15,7 @@ slug: concrete-math-recurrent-problems-homework-warmup
 status: publish
 tags: [Math]
 template: ''
-title: 具体数学-递归问题-热身题答案
+title: 具体数学 递归问题 热身题答案
 type: post
 ---
 注：本节内容为《具体数学》(原书第二版) 第一章 递归问题 热身题答案。
