feat: add exercise 29

--- a/posts/2022/3/无理数倍数分数部分分布均匀阐释的推理.md
+++ b/posts/2022/3/无理数倍数分数部分分布均匀阐释的推理.md
@@ -333,3 +333,65 @@ Q.E.D.
 ## 思考
 
 这个过程中，我们用到了大量的放缩技巧。最后得到了一个关于 $D$ 的递推不等式链。思考一下这个式子到底说明了什么：由于 $\lfloor n\alpha \rfloor$ 总是小于 $n$，所以当 $n$ 充分大的时候，$D(\alpha, n)$ 总是比 $n$ 要小得多。从而说明了定理在这种特殊情况下，即 $f_v$ 阶梯函数作为映射关系时的正确性。
+
+## 补充
+
+接下来，我们还证明一下 习题 29，也就是这个推导中的补充结论。
+
+首先变换递推式，然后进行放缩：
+
+$$
+	\begin{aligned}
+		-s(\alpha, n, v) &= s(\alpha', \lceil n\alpha \rceil, v') + S - \epsilon - \{0 \text{ or } 1\} \\ 
+		&\geq s(\alpha', \lceil n\alpha \rceil, v') + 0 - \epsilon - 1 \\
+		&\geq s(\alpha', \lfloor n\alpha \rfloor, v') - v' - \epsilon - 1 \\
+		&\geq s(\alpha', \lfloor n\alpha \rfloor, v') - \alpha ^ {-1} - 2
+	\end{aligned}
+$$
+
+注：由于和上面的相似，所以包含了大量的跳步。
+
+故
+
+$$
+	|s(\alpha, n, v)| \geq -s(\alpha, n, v) \geq s(\alpha', \lfloor n\alpha \rfloor, v') - \alpha ^ {-1} - 2
+$$
+
+$$
+	\Leftrightarrow s(\alpha', \lfloor n\alpha \rfloor, v') \leq |s(\alpha, n, v)| + \alpha ^ {-1} + 2
+$$
+
+又 $|s(\alpha, n, v)| + \alpha ^ {-1} + 2 > 0$，故
+
+$$
+	|s(\alpha', \lfloor n\alpha \rfloor, v')| \leq |s(\alpha, n, v)| + \alpha ^ {-1} + 2
+$$
+
+即
+
+$$
+	|s(\alpha, n, v)| \geq |s(\alpha', \lfloor n\alpha \rfloor, v')| - \alpha ^ {-1} - 2
+$$
+
+最后再进行一下放缩：
+
+$$
+	\begin{aligned}
+		D(\alpha',\lfloor n\alpha \rfloor) &= \max_{v'} |s(\alpha', \lfloor n\alpha \rfloor, v')| \\ 
+		&\leq |s(\alpha, n, v)| + \alpha ^ {-1} + 2 \\ 
+		&\leq \max_v |s(\alpha, n, v)| + \alpha ^ {-1} + 2 \\ 
+		&= D(\alpha, n) + \alpha ^ {-1} + 2
+	\end{aligned}
+$$
+
+即
+
+$$
+	D(\alpha, n) \geq D(\alpha',\lfloor n\alpha \rfloor) - \alpha ^ {-1} - 2
+$$
+
+结合上面的结论，我们得到了：
+
+$$
+	D(\alpha',\lfloor n\alpha \rfloor) - \alpha ^ {-1} - 2 \leq D(\alpha, n) \leq D(\alpha', \lfloor n\alpha \rfloor) + \alpha ^ {-1} + 2
+$$
