chore: fix mathjax symbol

--- a/posts/2022/3/理解无限和式.md
+++ b/posts/2022/3/理解无限和式.md
@@ -58,7 +58,7 @@ $$
 
 由此我们证明了 $A$ 一定为一个上界。接下来，我们证明 $A$ 一定是**最小**上界，即为**上确界**。
 
-若 $\exist A' < A$ 为其上确界，根据
+若 $\exists A' < A$ 为其上确界，根据
 
 $$
 	\lim_{n\rightarrow\infty} \sum_{k=0}^n a_k = A
@@ -67,13 +67,13 @@ $$
 则对于 $\forall \epsilon > 0$，
 
 $$
-	\exist N, s.t. ~n > N \Rightarrow A - \epsilon < \sum_{k=0}^n a_k < A + \epsilon
+	\exists N, s.t. ~n > N \Rightarrow A - \epsilon < \sum_{k=0}^n a_k < A + \epsilon
 $$
 
 取 $\epsilon = A - A'$，则
 
 $$
-	\exist N, s.t. ~n > N \Rightarrow A - (A - A') < \sum_{k=0}^n a_k < A + (A - A')
+	\exists N, s.t. ~n > N \Rightarrow A - (A - A') < \sum_{k=0}^n a_k < A + (A - A')
 $$
 
 即
@@ -118,13 +118,13 @@ $$
 对于复数的情况，我们可以同样如法炮制，**定义**：
 
 $$
-	\sum_{k\in K} a_k = \sum_{k\in K} \real a_k + i\sum_{k\in K} \image a_k
+	\sum_{k\in K} a_k = \sum_{k\in K} \Re a_k + i\sum_{k\in K} \Im a_k
 $$
 
 根据之前实数的定义：
 
 $$
-	\sum_{k\in K} a_k = \sum_{k\in K} \real a_k^+ - \sum_{k\in K} \real a_k^- + i\sum_{k\in K} \image a_k^+ - i\sum_{k\in K} \image a_k^-
+	\sum_{k\in K} a_k = \sum_{k\in K} \Re a_k^+ - \sum_{k\in K} \Re a_k^- + i\sum_{k\in K} \Im a_k^+ - i\sum_{k\in K} \Im a_k^-
 $$
 
 ## 多重和式的基本原理证明 (补充)
