chore: fix title

--- a/posts/2022/3/具体数学-和式-旁注.md
+++ b/posts/2022/3/具体数学-和式-旁注.md
@@ -15,7 +15,7 @@ slug: concrete-math-sum-notes
 status: publish
 tags: [Math]
 template: ''
-title: 具体数学-和式-旁注
+title: 具体数学 和式 旁注
 type: post
 ---
 注：本节内容为《具体数学》(原书第二版) 第二章 和式 的旁注。
