--- a/posts/2022/3/底和顶和式一道难蚌的习题.md
+++ b/posts/2022/3/底和顶和式一道难蚌的习题.md
@@ -225,10 +225,10 @@ $$
 
 可能还看不出这个式子为什么是对的。其实，$(n+2^{k-1}) \pmod {2^k} - 2^{k-1}$ 这个我通过短时间观察得到的结果很难说明正确性，但是我们化简后的结果就可以。我们可以证明：
 
-1. $\displaystyle 2^k \Big \lfloor \frac {n+2^{k-1}} {2^k} \Big \rfloor \in \mathbb Z$
-2. $\displaystyle t_k(n) \in (-2^{k-1},2^{k-1}]$ (可以很容易地通过讨论 $n$ 是否小于等于 $2^{k-1}$ 证明)
+1. $\displaystyle 2^k \Big \lfloor \frac {n+2^{k-1}} {2^k} \Big \rfloor \in \mathbb Z$，因为性质 $\Vert x + n \Vert = \Vert x \Vert, n \in \mathbb Z$ 我们可以证明这个值和原来的值相等
+2. $\displaystyle t_k(n) \in (-2^{k-1},2^{k-1}]$ (可以很容易地通过讨论 $n$ 是否小于等于 $2^{k-1}$ 证明)，也就是说可以证明 $\displaystyle \frac {n+t_k(n)}{2^k} \in (-\frac 1 2, \frac 1 2]$，可以直接脱去 $\Vert \cdot \Vert$
 
-此外，不难看出，对于没有改变，即正常的项，我们定义的 $t_k(n)$ 仍旧使用，因为此时 $t_k(n) = n$。
+此外，不难看出，对于没有改变，即正常的项，我们定义的 $t_k(n)$ 仍旧适用，因为此时 $t_k(n) = n$。
 
 接下来，我们需要用归纳来证明一个很强的结论：
 
