feat: add content

--- a/posts/2022/3/具体数学-数论-欧拉定理-证明.md
+++ b/posts/2022/3/具体数学-数论-欧拉定理-证明.md
@@ -161,3 +161,45 @@ $$
 $$
 	a^{\varphi(m)} \equiv 1 \pmod m
 $$
+
+## 总结与反思
+
+前面看了书上后面的一些论述，突然想到这个引理有更简单的证明方法。
+
+已知
+
+$$
+	k \perp m
+$$
+
+又
+
+$$
+	a \perp m
+$$
+
+根据 $(4.30)$，这两个条件等价于
+
+$$
+	ak \perp m
+$$
+
+等价于
+
+$$
+	\gcd (ak,m)=1
+$$
+
+根据 $(4.4)$ 欧几里得递推式
+
+$$
+	\gcd (ak, m) = \gcd (ak \bmod m, m) = 1
+$$
+
+等价于
+
+$$
+	ak \bmod m \perp m
+$$
+
+引理证毕。
