feat: add and update posts

--- a/posts/2022/3/深度学习的正则化方法.md
+++ b/posts/2022/3/深度学习的正则化方法.md
@@ -35,7 +35,7 @@ type: post
 
 ## Weight Decay
 
-Weight Decay 的主要思想就是减缓参数的更新幅度，也就是说减小损失函数，使得梯度下降的步幅变小。
+Weight Decay 的主要思想就是加快参数的更新幅度，也就是说增大损失函数，使得梯度下降的步幅变大。但为什么这样可以防止过拟合？根据奥卡姆剃刀法则，我们倾向于认为，参数越小，网络越不复杂，越不容易过拟合，而实践也证明了这一点。
 
 下面的公式节选自我之前的汇报笔记：
 
@@ -213,3 +213,4 @@ net.train() # 启用 dropout
 
 * https://zh-v2.d2l.ai/chapter_multilayer-perceptrons/weight-decay.html
 * https://zh-v2.d2l.ai/chapter_multilayer-perceptrons/dropout.html
+* https://blog.csdn.net/jialibang/article/details/108991631
