feat: add links

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -22,10 +22,24 @@ type: page
 
 # 工欲善其事，必先利其器
 
-- https://acgsecrets.hk/
-- https://dmhy.org/
-- https://nyaa.si/
-- https://bgm.tv/
+- 新番表
+  - https://acgsecrets.hk/
+- 互联网精神
+  - https://dmhy.org/
+  - https://nyaa.si/
+  - https://sukebei.nyaa.si
+  - https://mikanani.me/
+- Wiki
+  - https://bgm.tv/
+- 里
+  - https://www.hacg.cat/wp/
+- 组
+  - https://vcb-s.com
+- BBS
+  - https://bbs.acgrip.com/
+- 本
+  - https://e-hentai.org
+  - https://exhentai.org
 
 # 番 & 电影
 
