feat: add yuru camp

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -944,3 +944,15 @@ Bug：
 过：
 * ~~和 Idoly Pride 设定有些撞车，不过听说是早放和晚放的原因~~
 * 那个内部投票是什么憨批剧情...
+
+## 摇曳露营 剧场版
+
+第一次看yuru camp是在20年暑假的最后一周。高一升高二的这个暑假。摆烂；暑假作业抄都懒得抄；空调；棒冰。怀着极度开摆的心情看番，而带给我的也正是无与伦比的平静与对心灵的净化。节奏恰到好处，恬淡、悠然。
+
+与之的缘分也十分有意思。记得那年的后半年在搞A/N双卡然后拿BFRC补帧的事情。拿到用FDU经费搞来的RX560后，做的第一个补帧测试便是摇曳露营的S1E1。可能也正是因为这个原因，时至今日仍然对那个公路的平移镜头，第一个cut印象深刻。虽然那也确实是一个非常好的用来测试插帧的镜头就是了（笑。
+
+虽然下周有三个final，但是直觉告诉我今天同样是个适合开摆的好日子。躺在床上，摆好电脑，两个小时，一口气看完剧场版。
+
+就像k-on一样，终究是要从高中毕业的。但是真的让这样的一个后日谈摆在面前，仍是觉得百感交集。工作、生活、故友、爱好。这个剧场版展现出了一个理想的平衡，给人以一如既往的恬淡与感动。但是看着成为社畜的芝麻凛，讲个鬼故事，还有三年就要成为社畜了。
+
+期待第三季。期待一月的山梨。
